fix: set form buttons to default alignment (left) instead of right.

--- a/director/assets/sass/form/elements/_form-actions.sass
+++ b/director/assets/sass/form/elements/_form-actions.sass
@@ -1,9 +1,7 @@
 ////
 /// Form actions
 ////
-.form-actions
-    text-align: right
-    
+.form-actions    
     &.separation
         margin-top: rem(20)
         margin-bottom: rem(40)
